--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -2,43 +2,38 @@
 \label{cha:soa}
 \vspace{0.4 cm} 
 
-In this section, the current state of the art has been analyzed in the context of counting people in a certain place of interest. The various technologies used for this purpose in the literature are presented. Furthermore, the reasons why sniffing the Wi-Fi probe request frames is the solution with the best trade-offs have been explained by presenting several implementations and some use cases.
-
-At the end of this chapter, it will be clear the choice to develop this type of system with the U-Hopper team to find a solution to estimate the number of people with high accuracy and low costs, providing real-time data transmission and ensuring the privacy of users.
+In this section, the current state of the art is analyzed in the context of counting people in a particular place of interest. The various technologies presented in the literature for this purpose are discussed. Furthermore, the reasons why counting people through the sniffing of the Wi-Fi probe request frames is the solution with the best trade-offs are explained. In addition, several implementations and some use cases are presented.
+At the end of this chapter, it will be clear the choice to develop this type of system with the U-Hopper team to find a solution to estimate the number of people. Unlike other solutions, our system achieves high accuracy, has a low-cost implementation, allows the transmission of data in real-time and ensures user privacy.
 
 
 \section{People counting methods}
 \label{sec:count}
 \vspace{0.2 cm} 
 
-Let us start by thinking about before the popularity of mobile devices and the development of all these new communication technologies that are making this world increasingly interconnected and therefore before the opportunity to exploit the signals of these devices to identify the presence of people.
+Let us start by thinking about before the popularity of mobile devices and the development of all these new communication technologies that are making this world increasingly interconnected. Therefore, before it becomes possible to exploit the signals of people's devices to identify and count them.
 
-In 2010, Pinna et al. compared some of the technologies of the time  (e.g. infrared sensors, treadle switch-based systems, weigh in motion systems using load cells) to avoid the manual collection of the occupation information and promote automatic counting \cite{pinna2010automatic}. All of these methods presented have good accuracy  (95\% in optimal conditions of use for treadle mats and approximately 90\% for the infrared sensors, 97\% for load cells) but have high costs and need the installation and the maintenance of the sensors.
+In 2010, Pinna et al. compared some of the technologies of the time  (e.g. infrared sensors, treadle switch-based systems, weigh in motion systems using load cells) to avoid the manual collection of the occupation information and promote automatic counting \cite{pinna2010automatic}. All of these methods presented in the paper have good accuracy  (95\% in optimal conditions of use for treadle mats and approximately 90\% for the infrared sensors, 97\% for load cells) but have high costs and need the installation and the maintenance of the sensors.
 
-Other studies have been done to improve the performance of infrared sensor systems, Jia and Zhang described a system with subordinate nodes for collecting information from pyroelectric infrared sensors and a master node that when it receives information from a sensor has to determine whether a person is entering or leaving \cite{jia2015application}. 
-Systems like this require sensors for each entry point, in the case of overcrowding or continuous flows of people, some sensors may not work properly and can lead to a wrong estimation and these errors accumulate over time.
+Other studies have been carried out to improve the performance of infrared sensor systems. Jia and Zhang described a system with subordinate nodes for collecting information from pyroelectric infrared sensors and a master node that when it receives information from a sensor has to determine whether a person is entering or leaving \cite{jia2015application}. 
+Such systems require sensors for each entry point, in the case of overcrowding or continuous flows of people, some sensors may not work properly and can lead to a wrong estimation. In these solutions, errors accumulate over time.
 
-Mikkelsen et al. compared a Wi-Fi-based method to estimate the number of people present with a probability distribution of the number of Wi-Fi enabled devices that a person is carrying and a light sensor estimator based method \cite{mikkelsen2018sensing}. They concluded that the Wi-Fi estimator is better at recovering after errors, while errors in light sensor estimator accumulate over time.
-
+Mikkelsen et al. compared a a light sensor estimator based method with a Wi-Fi-based method to estimate the number of people present \cite{mikkelsen2018sensing}. This simple Wi-Fi implementation uses a probability distribution of the number of Wi-Fi enabled devices that a person is carrying. They concluded that the Wi-Fi estimator is better at recovering after errors, while errors in light sensor estimator accumulate over time.
 These presented methods, in which errors accumulate over time, are not acceptable in a continuous monitoring system and this does not happen with the Wi-Fi solution and other solutions.
 
 Many methods are proposed in the literature for processing images and videos captured by a camera device. Recognition and tracking of people by a stereo vision system to increase or decrease a people counter \cite{bernini2014embedded}, a separated-aggregated framework based on deep learning to estimate the number of people from still images \cite{zhang2018auxiliary}, a deep learning-based method for estimating crowd density and the total number of people in high-density crowd images \cite{zhang2019deep}, estimation of the people flows and then summing them to obtain people densities \cite{liu2019estimating}, a locate size and count CNN (Convolutional Neural Network) model is proposed to to resolve people in dense crowds  \cite{sam2019locate}.
-These methods rely on the use of cameras to get the data to analyze and therefore have the problems related to these devices. Images can be noisy in dim light conditions and, due to the presence of obstructions or overlaps, people may not be detectable. Moreover, the implementation of these methods entails high costs due to video camera devices.
-However, taking photos or videos of unknown people is always a privacy issue as decreed by the GDPR (General Data Protection Regulation) in the rights of the data subject, therefore these types of solutions cannot be used in our problem.
+These methods rely on the use of cameras to get the data to analyze and therefore have the problems related to these devices. Images can be noisy in dim light conditions and, due to the presence of obstructions or overlaps, people may not be detectable. Moreover, the implementation of these methods entails high costs due to video camera devices. However, taking photos or videos of unknown people is always a privacy issue as decreed by the GDPR (General Data Protection Regulation) in the rights of the data subject. Therefore, these types of solutions cannot be used to solve our problem.
 
 A not very popular but interesting method of counting the number of people is to analyze the audio of a place with a microphone and count the different audio tones \cite{kannan2012low}. Afterward, Valle proposed a more sophisticated prediction model to estimate the occupancy of a room which borrows speech recognition tradition and is based on Gaussian mixtures and hidden Markov models \cite{valle2016abroa}.
-These methods can be inaccurate due to high ambient noise and the limitations on the quality of the microphones must be considered during the analysis. In addition, other sounds from smartphones or radios must be filtered to avoid being counted as people.
-However, as in the case of video methods, the analysis of the voice of unknown people is always a privacy issue as decreed by the GDPR, therefore these types of solutions cannot be used in our problem.
+These methods can be inaccurate due to high ambient noise and the limitations on the quality of the microphones must be considered during the analysis. In addition, other sounds from smartphones or radios must be filtered to avoid being counted as people. However, as in the case of video methods, the analysis of the voice of unknown people is always a privacy issue as decreed by the GDPR. Therefore, these types of solutions cannot be used to solve our problem.
 
-In this new era dominated by smartphones, radio-frequency solutions are growing: in recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
+As reported by wearesocial.com in the Digital 2020 report \footnote{https://wearesocial.com/digital-2020}, 67\% of the world population is a  mobile phone user. In Europe, Internet users are equal to 84\% of the population and 92\% of total Internet users is a mobile phone user. In this new era dominated by smartphones, radio-frequency solutions to exploit the signals of these devices to count people are increasing. In recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
 
-Many researchers have investigated the possibility of estimating the number of people using the two most popular standards for wireless communication, i.e. Wi-Fi and Bluetooth. In 2014 Schauer et al. performed this type of comparison with the aim of creating a pedestrian flow estimation system. They stated that only a fraction of surrounding devices could have been tracked by periodical Bluetooth scans and therefore Bluetooth-based estimations were less accurate, showing an average correlation to the ground truth of only 0.53 in the best case. In contrast to Bluetooth, Wi-Fi tracking provided a good approximation of crowd densities and pedestrian flows with an average correlation of 0.75 \cite{schauer2014estimating}.
+Many researchers have investigated the possibility of estimating the number of people using the two most popular standards for wireless communication, i.e. Wi-Fi and Bluetooth. In 2014 Schauer et al. performed this type of comparison with the aim of creating a pedestrian flow estimation system. They stated that only a fraction of surrounding devices could have been tracked by periodical Bluetooth scans. Therefore Bluetooth-based estimations were less accurate, showing an average correlation to the ground truth of only 0.53 in the best case. In contrast to Bluetooth, Wi-Fi tracking provided a good approximation of crowd densities and pedestrian flows with an average correlation of 0.75 \cite{schauer2014estimating}.
 
-Bai et al. tried to detect device with different approaches: the number of the sensed Bluetooth Low Energy devices was about $\frac{1}{3}$ of the sensed Wi-Fi devices, these data were sparse, and most of the sensed devices only appeared for a few seconds. The number of unique Bluetooth MAC (Media Access Control) addresses was less than $\frac{1}{10}$ of the unique Wi-Fi MAC addresses, so they gave up the possibility of using Bluetooth Low Energy and Bluetooth data. They concentrated on filtering the Wi-Fi data and obtained a correlation with the ground truth of 0.839 \cite{bai2017lessons}.
-
+Bai et al. tried to detect devices with different approaches. The number of the sensed Bluetooth Low Energy devices was about $\frac{1}{3}$ of the sensed Wi-Fi devices. Bluetooth Low Energy data were sparse, and most of the sensed devices only appeared for a few seconds. The number of unique Bluetooth MAC addresses was less than $\frac{1}{10}$ of the unique Wi-Fi MAC addresses, so they gave up the possibility of using Bluetooth Low Energy and Bluetooth data. They concentrated on filtering the Wi-Fi data and obtained a correlation with the ground truth of 0.839 \cite{bai2017lessons}.
 These papers show us the feasibility of using methods based on Wi-Fi, unlike the methods based on Bluetooth and Bluetooth Low Energy which do not provide satisfactory results in terms of accuracy.
 
-Di Domenico et al. were the first to propose to use LTE signals of opportunity for applications different from location/tracking, i.e. to estimate crowd density within an environment relying on the analysis of variations of the LTE reference signal received power \cite{di2017lte}. This approach is affected by the changing of positions that lead to a different superimposition of multipath components and, hence, to a different received power. The same number of people at different times can generate totally different values, thus leading to significant errors during the estimation process. They achieved an average accuracy ranging of 82\%, but they tested this system only with a maximum of 5 people. As the number of people increases, the accuracy of the classification decreases, therefore it cannot be used in overcrowded areas.
+Di Domenico et al. were the first to propose to use LTE signals of opportunity for applications different from location/tracking, i.e. to estimate crowd density within an environment relying on the analysis of variations of the LTE reference signal received power \cite{di2017lte}. This approach is affected by the changing of positions that lead to a different superimposition of multipath components and, hence, to a different received power. The same number of people at different times can generate totally different values, thus leading to significant errors during the estimation process. They achieved an average accuracy ranging of 82\%, but they tested this system only with a maximum of 5 people. As the number of people increases, the accuracy of the classification decreases. Therefore this approach cannot be used in overcrowded areas.
 
 Shibata and Yamamoto used a sensor node to obtain time-series data of signal strength on a frequency band used for cellular communications. Then they analyzed them using several machine learning techniques to estimate the crowd density around the sensor node installation site \cite{shibata2019people}. This method did not provide the number of people but only the stages of occupancy, with three stages (Low, Normal and Crowd) the precision is 78\% but with five (Low, Little\_Normal, Normal, Little\_Crowd and Crowd) is only 53\%. From this type of information, it is not very clear how many people are in the place and listening to a reserved part of the spectrum is illegal.
 
@@ -55,7 +50,7 @@ Gupta et al. proposed an algorithm to estimate the number of people that are cro
 \label{sec:probe}
 \vspace{0.2 cm}
 
-From the previous section, it is clear that the Wi-Fi solution is a step further compared to other solutions in the literature. By analyzing the Wi-Fi probe request frames, it is possible to better estimate the number of people in a certain place with lower costs.
+From the previous section, it is clear that the Wi-Fi solution is a step further compared to other solutions in the literature. By analyzing the Wi-Fi probe request frames, it is possible to better estimate the number of people in a certain place with lower costs. This method does not accumulate errors over time, does not require a predefined path where users must be and can cover a large area. Moreover, it is possible to anonymize the MAC address to ensure user privacy.
 
 Handte et al. presented one of the first approaches to estimate crowd density by monitoring Wi-Fi probe request frames. They modified the firmware of some existing access points and created a Web service that allows the upload of the latest crowd density measurements \cite{handte2014crowd}. The system was able to continuously detect around 20\% of the people on average because in 2014 there were far fewer mobile devices than nowadays (only 49\% of the population had a smartphone in Span in 2014) and they didn't have the advanced techniques of nowadays.
 
@@ -67,7 +62,7 @@ Nishide filtered the collected data using a combination of RSSI, packet frequenc
 
 These papers show us the possibility of sending data in real-time and that there is a correlation between the devices obtained from the collected data and the presence of people. Furthermore, they suggest that the use of advanced techniques, such as machine learning, could have a positive impact on accuracy in solving the occupancy problem.
 
-Wang et al. employed the Random Forest method to infer occupant counts using the Wi-Fi connection counts data \cite{wang2019inferring}. The method was tested in a real office building with an average occupancy of 22-27 people and a peak occupancy of 48-74 people, the RMSE (Root Mean Square Error) is four people on the test set. For more than 70\% of estimations, the errors are within two people counts, and for more than 90\% of estimations, the errors are within six people counts. 
+Wang et al. employed the Random Forest method to infer occupant counts using the Wi-Fi connection counts data \cite{wang2019inferring}. The method was tested in a real office building with an average occupancy of 22-27 people and a peak occupancy of 48-74 people, the RMSE (Root Mean Square Error) is four people on the test set. For more than 70\% of estimations, the errors are within two people counts, and for more than 90\% of estimations, the errors are within six people counts.
 This paper confirms that the use of machine learning techniques has a good impact on estimating the number of people but this method does not have a communication system for the transmission of data and results in real-time.
 
 
@@ -75,25 +70,17 @@ This paper confirms that the use of machine learning techniques has a good impac
 \label{sec:cases}
 \vspace{0.2 cm}
 
-The Wi-Fi method has several use cases, a strength of this method is in fact the versatility of use for many application contexts..
+The Wi-Fi method has several use cases. A strength of this method is in fact the versatility of use for many application contexts.
 
 Prasertsung and Horanont used the Wi-Fi probe request frames monitoring technique to identify the number of the customers visiting a coffee shop. They showed that the number of customers tends to increase on the average of 30\% on a promotion day \cite{prasertsung2017does}. This can be used to explore how a promotion can drive customers into stores.
-
 Shen et al. proposed a shopping group detection system using Wi-Fi. Experimental results indicated that this method could is capable of detecting over 90\% of the groups with an accuracy of 91\% \cite{shen2018snow}.
 
 Using real-world data collected in a large social event by a network of passive Wi-Fi sensors Zhou et al. extracted patterns related to crowd behaviors \cite{zhou2020understanding}.
-
 Singh et al. proposed a first-hand application of Wi-Fi sensors and LSTM (Long Short Term Memory) neural network for crowd forecasting and large-scale public event monitoring \cite{singh2020crowd}.
 
-
-\vspace{0.1 cm}
-\subsection{People estimation on public transports}
-\label{sec:transports}
-\vspace{0.1 cm}
-
-The particular case of people estimation on public transport such as busses is a complex application because unlike the estimation in a static place like a shop, there is the movement to consider and the presence of people waiting at the stops, people in the traffic, pedestrians and more. The esteem of people in public transport is a really interesting challenge that is dealt with in literature and that can provide some useful information to public transport managers.
+The particular case of people estimation on public transport such as buses is a complex application because, unlike the estimation in a static place such as a shop, it is necessary to consider that the vehicle is in motion. Therefore, the presence of people waiting at the stops, people in the traffic, pedestrians and other things should be considered during the data cleaning phase. The esteem of people in public transport is a really interesting challenge that is dealt with in literature. This can provide some useful information to public transport managers, from which they can better manage the routes and reorganize the distribution of their vehicles.
 
 Handte et al. presented a navigation system for bus passengers that has the ability to seamlessly interconnect bus passengers with the real-world public bus infrastructure. Using the occupancy classes to classify the prediction (low, medium, and high occupancy), they got an exact match accuracy of 61.9\% \cite{handte2016internet}. This work provides an indication of the feasibility of real-time information but accuracy can certainly be improved with the use of machine learning techniques.
 
-Oransirikul and Takada presented a method to predict the number of passengers at the bus stop by capturing Wi-Fi activity and using the polynomial regression method with six independent variables with a degree of 2 \cite{oransirikul2019practicability}. It works well with an average MAE (Mean Absolute Error) of the prediction of 6, but they did not deal with transmission and analysis of data in real-time.
+Oransirikul and Takada presented a method to predict the number of passengers at the bus stop by capturing Wi-Fi activity. They used a polynomial regression method with six independent variables with a degree of 2 \cite{oransirikul2019practicability}. It works well with an average MAE (Mean Absolute Error) of the prediction of 6, but they did not deal with transmission and analysis of data in real-time.
 Our approach is similar but used machine learning to determine the best polynomial approximation, i.e. the degree and the coefficients, using two variables: trend and seasonality of the number of devices detected.
